%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1102 &-8818786650570514718
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Ola
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 182715834363997998}
  - {fileID: 2416332248454193643}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 96512622c026eca48ba349a3be5cc2c8, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-8405954137810395979
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Entrada
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 3746308525246168054}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 2cf71bc42d9b4b64c8cd1cdc7a869c8f, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-7303546684934904968
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Salida
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: b485542c2c070c44fa80c6fb3d7254ee, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-4667430635714894941
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Triangulo Inv
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -824233763341854126}
  - {fileID: 1457680158527208466}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: d429ce19e2c1a364fa49e51d4a4bafa1, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &-4031164233608182056
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1293126385910346317}
    m_Position: {x: 30, y: 200, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -8405954137810395979}
    m_Position: {x: 30, y: 280, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -3616441386230083657}
    m_Position: {x: 30, y: 450, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 365595899569669560}
    m_Position: {x: -350, y: 370, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -4667430635714894941}
    m_Position: {x: 30, y: 540, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -7303546684934904968}
    m_Position: {x: -220, y: 450, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2086202418875194009}
    m_Position: {x: -350, y: 540, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -8818786650570514718}
    m_Position: {x: 30, y: 370, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1293126385910346317}
--- !u!1102 &-3616441386230083657
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: MedioV
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1784037389670171984}
  - {fileID: -1706490457003563420}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 868c6028a00ac024d996481af419ff9b, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-2291112172636985128
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7303546684934904968}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.9158227
  m_TransitionOffset: 0
  m_ExitTime: 1.06085175e-10
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-1985278292683718674
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2086202418875194009}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 6.851137
  m_TransitionOffset: 0
  m_ExitTime: 4.730545e-10
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-1706490457003563420
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7303546684934904968}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.7944136
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-847475002024952917
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -8405954137810395979}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-824233763341854126
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3616441386230083657}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.974763
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Boss3Container
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Entrada
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Ola
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: LAL
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MedioLento
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TrianguloInv
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MedioV
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Salida
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -4031164233608182056}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &182715834363997998
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 365595899569669560}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 6.9546785
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000012736592
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &365595899569669560
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: LadoALado
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -1985278292683718674}
  - {fileID: 594756014588059865}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: da8424197380dec4786d3cd733cce04a, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &594756014588059865
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7303546684934904968}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.849674
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &1293126385910346317
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Espera
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -847475002024952917}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: ac698b25fd2cd7d4ca9124699ff43ef9, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &1457680158527208466
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7303546684934904968}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.8810523
  m_TransitionOffset: 0
  m_ExitTime: 8.024986e-10
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1784037389670171984
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -8818786650570514718}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 4
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &2086202418875194009
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: MedioCirculoLento
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 5003459630653060779}
  - {fileID: -2291112172636985128}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 6b2c7089f09f8b44d928e1225721be30, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &2416332248454193643
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7303546684934904968}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 3.8921566
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000015152637
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &3746308525246168054
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -8818786650570514718}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 2
  m_TransitionOffset: 0
  m_ExitTime: 0.00000002199716
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &5003459630653060779
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Entrada
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Ola
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: LAL
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioLento
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: TrianguloInv
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: MedioV
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: Salida
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -4667430635714894941}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 8.999975
  m_TransitionOffset: 0
  m_ExitTime: 0.0000000018396549
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
